// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getAssetsForVersion > returns valid JSON - ea 1`] = `
{
  "pagecount": 3,
  "releases": [
    {
      "platforms": {
        "os_mock-arch_mock": {
          "assets": [
            {
              "architecture": "arch_mock",
              "checksum": "checksum_mock",
              "extension": ".tar.gz",
              "link": "https://link_mock/",
              "os": "os_mock",
              "size": 0,
              "type": "DEBUGIMAGE",
            },
          ],
        },
      },
      "release_link": "https://release_link_mock/",
      "release_name": "0.0.0",
      "timestamp": "2020-01-01T00:00:00.000Z",
    },
  ],
}
`;

exports[`getAssetsForVersion > returns valid JSON 1`] = `
{
  "pagecount": 3,
  "releases": [
    {
      "platforms": {
        "os_mock-arch_mock": {
          "assets": [
            {
              "architecture": "arch_mock",
              "checksum": "checksum_mock",
              "extension": ".tar.gz",
              "link": "https://link_mock/",
              "os": "os_mock",
              "size": 0,
              "type": "JDK",
            },
          ],
        },
      },
      "release_link": "https://release_link_mock/",
      "release_name": "0.0.0",
      "timestamp": "2020-01-01T00:00:00.000Z",
    },
  ],
}
`;

exports[`returns valid JSON - with installers 1`] = `
{
  "pagecount": 3,
  "releases": [
    {
      "platforms": {
        "os_mock-arch_mock": {
          "assets": [
            {
              "architecture": "arch_mock",
              "checksum": "checksum_mock",
              "extension": ".tar.gz",
              "installer_checksum": "installer_checksum_mock",
              "installer_extension": ".msi",
              "installer_link": "https://installer_link_mock/",
              "installer_size": 0,
              "link": "https://link_mock/",
              "os": "os_mock",
              "size": 0,
              "type": "JDK",
            },
          ],
        },
      },
      "release_link": "https://release_link_mock/",
      "release_name": "0.0.0",
      "timestamp": "2020-01-01T00:00:00.000Z",
    },
  ],
}
`;

exports[`returns valid JSON - with release notes 1`] = `
{
  "pagecount": 3,
  "releases": [
    {
      "platforms": {
        "os_mock-arch_mock": {
          "assets": [
            {
              "architecture": "arch_mock",
              "checksum": "checksum_mock",
              "extension": ".tar.gz",
              "link": "https://link_mock/",
              "os": "os_mock",
              "size": 0,
              "type": "JDK",
            },
          ],
        },
      },
      "release_link": "https://release_link_mock/",
      "release_name": "0.0.0",
      "release_notes": true,
      "release_notes_name": "release_name_mock",
      "timestamp": "2020-01-01T00:00:00.000Z",
    },
  ],
}
`;

exports[`returns valid JSON - with source 1`] = `
{
  "pagecount": 3,
  "releases": [
    {
      "platforms": {
        "os_mock-arch_mock": {
          "assets": [
            {
              "architecture": "arch_mock",
              "checksum": "checksum_mock",
              "extension": ".tar.gz",
              "link": "https://link_mock/",
              "os": "os_mock",
              "size": 0,
              "type": "JDK",
            },
          ],
        },
      },
      "release_link": "https://release_link_mock/",
      "release_name": "0.0.0",
      "source_url": "https://source_mock/",
      "timestamp": "2020-01-01T00:00:00.000Z",
    },
  ],
}
`;
